373
I get:
{code}
 <console>:9: error: error overriding method baz in class Foo of type => Int;
 method baz needs `override' modifier
           def baz = 1   // override not required
               ^
{code}

Something's missing here?
